# Thesis

./: .gitmodules  LICENSE  README.md  SYI_Project.md  Start Linux PC Franka_README.md
python/: .env.example  .gitignore  .gitmodules  API_call.py  CHANGELOG.md  Franka_Example_Implementation.py  LICENSE  Livestream_image.py  Main.py  README.md  Robot_Main.py  Vision_test.py  Vision_test_undistorted.py  changes.json  configuration.json  env.example  gui.py  paths.py  pddl_planner.py  pick_and_place.py  planner_interface.py  positions.json  positions.jsonl  prompt  pyproject.toml  robot.py  run_execute.py  session_handler.py
python/Communication_Module/: API_Main.py  API_test.py  __init__.py  ambiguity_detection.py  api_main.py  block_parsing.py  capacity_tools.py  change_management.py  prompts.py  rules.txt  scene_helpers.py  user_intent.py
python/Configuration_Module/: Apply_Config_Changes.py  Apply_Sequence_Changes.py  Update_Scene.py  apply_config_changes.py  apply_sequence_changes.py  update_scene.py
python/Core/: __init__.py  config.py  io_helpers.py  paths.py
python/Execution_Module/: Robot_Main.py  move_camera_home.py  pick_and_place.py  robot.py  sequence_executor.py
python/File_Exchange/: config.json  configuration.json  latest_pixel_map.json  llm_input.json  positions.json  positions_fixed.jsonl  sequence.json  workspace_changes.json
python/Memory/: config.json  configuration_11042026_1103.json  configuration_11042026_1104.json  configuration_11042026_1603.json  configuration_11042026_1639.json  configuration_11042026_1641.json  configuration_12042026_1033.json  configuration_12042026_1045.json  configuration_12042026_1052.json  configuration_12042026_1053.json  configuration_13042026_1052.json  configuration_15042026_1149.json  configuration_15042026_1153.json  configuration_15042026_1156.json  configuration_17042026_1433.json  configuration_17042026_1509.json  configuration_session_20260419_101714.json  configuration_update_20260411_163959.json  configuration_update_20260412_102527.json  configuration_update_20260412_170438.json  configuration_update_20260413_114306.json  positions_post_exec_20260314_160139.json  positions_post_exec_20260314_160929.json  positions_post_exec_20260314_162001.json  positions_post_exec_20260314_163008.json  positions_post_exec_20260314_185050.json  positions_post_exec_20260314_190231.json  positions_post_exec_20260314_190517.json  positions_post_exec_20260314_190813.json  positions_post_exec_20260314_191844.json  positions_post_exec_20260314_194252.json  positions_post_exec_20260314_194438.json  positions_post_exec_20260314_195538.json  positions_post_exec_20260314_195820.json  positions_post_exec_20260314_200142.json  positions_post_exec_20260314_201424.json  positions_post_exec_20260314_201614.json  positions_post_exec_20260314_201959.json  (+136 more)
(+174 files in other folders)
